Fix navbar badge on small screens

--- a/packages/frontend/src/styles/components/_Navbar.scss
+++ b/packages/frontend/src/styles/components/_Navbar.scss
@@ -67,6 +67,10 @@
       text-decoration: underline;
     }
   }
+
+  @media (max-width: 550px) {
+    margin-right: 0;
+  }
 }
 
 .Navbar-Badge {
